# MNIST-PyTorch-CPP

./: .gitignore  CMakeLists.txt  README.md  main.cpp
data/: download_mnist.py
include/: network.h
src/: network.cpp
